java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass21/ImplicitClassToExplicit.java
void <error descr="Compact source files are not supported at language level '11'">main<caret></error>() {
  <error descr="Cannot resolve symbol 'IO'">IO</error>.println("Hello World!");
}